<resources>
    <string name="app_name">Animal</string>
    <string name="seas" translatable="false">Seas</string>
    <string name="mammals" translatable="false">Mammals</string>
    <string name="birds" translatable="false">Birds</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="eagle" translatable="false">In general, an eagle is any bird of prey more powerful than a buteo. An eagle may resemble a vulture in build and flight characteristics but has a fully feathered (often crested) head and strong feet equipped with great curved talons. A further difference is in foraging habits: eagles subsist mainly on live prey.</string>
    <string name="falcon" translatable="false">Falcons are raptors, or birds of prey, with sharp talons on their feet, and sharp curved beaks. They are incredibly skilled predators on the wing, and their narrow wings enable them to maneuver perfectly in the air. There are approximately 40 different species of these birds, all in the taxonomic genus Falco.</string>
    <string name="hawk" translatable="false">Hawks are strong, powerful birds. Their feet are equipped with sharp, curved talons for capturing prey, and their strong beaks are hooked for biting and tearing flesh. Swift fliers, some hawks can attain speeds of over 150 mph when diving.</string>
    <string name="parrot" translatable="false">Parrots are not very heavy, in relation to their size, and compact body with a large head and a short neck. Their beaks are short, strong and curved. The two parts of the beak are very strong and used to break fruits and seeds.</string>
    <string name="peacock" translatable="false">Peacocks are extravagant birds, with iridescent blue necks, and bright green tail feathers dotted with eyespots. Peahens are dull brown, with iridescent green necks and cream-colored heads. Both peacocks and peahens have tufts of feathers crested out of their heads.</string>
    <string name="penguin" translatable="false">A penguin has a large head, short neck, and elongated body. The tail is short, stiff, and wedge-shaped. The legs and webbed feet are set far back on the body, which gives penguins their upright posture on land.</string>
    <string name="raven" translatable="false">Ravens are massive birds with a thick neck and distinctive shaggy throat feathers. Like other corvids, ravens have strong, large feet and long bills. Most ravens are a solid black. Ravens most closely resemble the common crow, but they soar in flight, more like a hawk.</string>
    <string name="sparrow" translatable="false">They are usually brown and gray. They have short tails and small, strong beaks. Most sparrows eat seeds or small insects. Sparrows are social birds and they live in flocks (groups)..</string>
    <string name="woodpecker" translatable="false">The woodpecker has a tough, pointed beak which it uses to chip on bark, drum on trees, and find insects. The tip of their bill is chisel-shaped and sharp from all the pecking on wood. The tongue of a woodpecker can span up to four inches long. On its tongue is a glue-like substance which helps in extracting insects.</string>
    <string name="cat" translatable="false">A cat is a furry animal that has a long tail and sharp claws. Cats are often kept as pets. 2. countable noun. Cats are lions, tigers, and other wild animals in the same family.</string>
    <string name="dog" translatable="false">The dog or domestic dog (Canis familiaris or Canis lupus familiaris) is a domesticated descendant of the wolf which is characterized by an upturning tail. The dog is derived from an ancient, extinct wolf, and the modern wolf is the dog\'s nearest living relative. The dog was the first species to be domesticated, by hunter–gatherers over 15,000 years ago, before the development of agriculture.\n\n\t Due to their long association with humans, dogs have expanded to a large number of domestic individuals and gained the ability to thrive on a starch-rich diet that would be inadequate for other canids. Over the millennia, dogs became uniquely adapted to human behavior, and the human-canine bond has been a topic of frequent study.\n\n\t The dog has been selectively bred over millennia for various behaviors, sensory capabilities, and physical attributes. Dog breeds vary widely in shape, size, and color. They perform many roles for humans, such as hunting, herding, pulling loads, protection, assisting police and the military, companionship, therapy, and aiding disabled people. This influence on human society has given them the sobriquet of "man's best friend".</string>
    <string name="hippopotamus" translatable="false">General characteristics. The hippopotamus has a bulky body on stumpy legs, an enormous head, a short tail, and four toes on each foot. Each toe has a nail-like hoof. Males are usually 3.5 metres (11.5 feet) long, stand 1.5 metres (5 feet) tall, and weigh 3,200 kg (3.5 tons).</string>
    <string name="lion" translatable="false">Lions have strong, compact bodies and powerful forelegs, teeth and jaws for pulling down and killing prey. Their coats are yellow-gold, and adult males have shaggy manes that range in color from blond to reddish-brown to black. The length and color of a lion\'s mane is likely determined by age, genetics and hormones.</string>
    <string name="monkey" translatable="false">monkey, Any member of two tropical anthropoid primate groups: Old World monkeys and New World monkeys. Almost all species are tropical or subtropical, and almost all are diurnal. Most species are arboreal, using all four limbs to leap from tree to tree. They can sit upright and stand erect.</string>
    <string name="rabbit" translatable="false">Rabbits are small, furry mammals with long ears, short fluffy tails, and strong, large hind legs. They have 2 pairs of sharp incisors (front teeth), one pair on top and one pair on the bottom. They also have 2 peg teeth behind the top incisors.</string>
    <string name="tiger" translatable="false">The tiger has a muscular body with powerful forelimbs, a large head and a tail that is about half the length of its body. Its pelage is dense and heavy, and colouration varies between shades of orange with white ventral areas and distinctive vertical black stripes; the patterns of which are unique in each individual.</string>
    <string name="turtle" translatable="false">Turtles are an order of reptiles known as Testudines, characterized by a shell developed mainly from their ribs. Modern turtles are divided into two major groups, the side-necked turtles and hidden neck turtles which differ in the way the head retracts. There are 360 living and recently extinct species of turtles, including tortoises and terrapins. They are found on most continents, some islands and much of the ocean. Like other reptiles, birds, and mammals, they breathe air and do not lay eggs underwater, although many species live in or around water. Genetic evidence typically places them in close relation to crocodilians and birds.\n\n\t Turtle shells are made mostly of bone; the upper part is the domed carapace, while the underside is the flatter plastron or belly-plate. Its outer surface is covered in scales made of keratin, the material of hair, horns, and claws. The carapace bones develop from ribs that grow sideways and develop into broad flat plates that join up to cover the body. Turtles are ectotherms or "cold-blooded", meaning that their internal temperature varies with their direct environment. They are generally opportunistic omnivores and mainly feed on plants and animals with limited movements. Many turtles migrate short distances seasonally. Sea turtles are the only reptiles that migrate long distances to lay their eggs on a favored beach.\n\n\t Turtles have appeared in myths and folktales around the world. Some terrestrial and freshwater species are widely kept as pets. Turtles have been hunted for their meat, for use in traditional medicine, and for their shells. Sea turtles are often killed accidentally as bycatch in fishing nets. Turtle habitats around the world are being destroyed. As a result of these pressures, many species are threatened with extinction.</string>
    <string name="zebra" translatable="false">Zebras are a short, stocky animal that is generally about 8 feet long and stands between 4 and 5 feet at the shoulder. They can weigh up to 650 pounds. The have black coats with white stripes and a short, coarse mane that stands straight up in the air. Their shiny coats help control the heat from the sun.</string>
    <string name="crab" translatable="false">A crab is a sea creature with a flat round body covered by a shell, and five pairs of legs with large claws on the front pair. Crabs usually move sideways. Crab is the flesh of this creature eaten as food.</string>
    <string name="dolphin" translatable="false">A dolphin is an aquatic mammal within the infraorder Cetacea. Dolphin species belong to the families Delphinidae (the oceanic dolphins), Platanistidae (the Indian river dolphins), Iniidae (the New World river dolphins), Pontoporiidae (the brackish dolphins), and the extinct Lipotidae (baiji or Chinese river dolphin). There are 40 extant species named as dolphins.\n\n\t Dolphins range in size from the 1.7-metre-long (5 ft 7 in) and 50-kilogram (110-pound) Maui\'s dolphin to the 9.5 m (31 ft 2 in) and 10-tonne (11-short-ton) orca. Several species of dolphins exhibit sexual dimorphism, in that the males are larger than females. They have streamlined bodies and two limbs that are modified into flippers. Though not quite as flexible as seals, some dolphins can briefly travel at speeds of 29 kilometres (18 mi) per hour or leap about 30 feet (9.1 m). Dolphins use their conical teeth to capture fast-moving prey. They have well-developed hearing which is adapted for both air and water. It is so well developed that some can survive even if they are blind. Some species are well adapted for diving to great depths. They have a layer of fat, or blubber, under the skin to keep warm in the cold water.\n\n\t Dolphins are widespread. Most species prefer the warm waters of the tropic zones, but some, like the right whale dolphin, prefer colder climates. Dolphins feed largely on fish and squid, but a few, like the orca, feed on large mammals such as seals. Male dolphins typically mate with multiple females every year, but females only mate every two to three years. Calves are typically born in the spring and summer months and females bear all the responsibility for raising them. Mothers of some species fast and nurse their young for a relatively long period of time. Dolphins produce a variety of vocalizations, usually in the form of clicks and whistles.\n\n\t Dolphins are sometimes hunted in places such as Japan, in an activity known as dolphin drive hunting. Besides drive hunting, they also face threats from bycatch, habitat loss, and marine pollution. Dolphins have been depicted in various cultures worldwide. Dolphins occasionally feature in literature and film, as in the film series Free Willy. Dolphins are sometimes kept in captivity and trained to perform tricks. The most common dolphin species in captivity is the bottlenose dolphin, while there are around 60 orcas in captivity.</string>
    <string name="jellyfish" translatable="false">Jellyfish have no brain, heart, bones or eyes. They are made up of a smooth, bag-like body and tentacles armed with tiny, stinging cells. These incredible invertebrates use their stinging tentacles to stun or paralyse prey before gobbling it up. The jellyfish\'s mouth is found in the centre of its body.</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="save" translatable="false">Save</string>
    <string name="phone" translatable="false">Phone</string>
</resources>